# subject-ia

./: README.md  checkmate.py  knight_tour.py  lib.py  main.py  pyproject.toml  result.out
show_algs/: show_algs.pyde
trab-1/: .gitignore  README.md  checkmate.py  pyproject.toml
trab-1/show_algs/: show_algs.pyde
trab-2/: README.md
